--- a/app/translations/nl.json
+++ b/app/translations/nl.json
@@ -1,31 +1,38 @@
 {
-  "basisregistratie-wonen.area": "Gebied",
   "basisregistratie-wonen.accommodation_object.id": "Verblijfsobject-ID",
   "basisregistratie-wonen.accommodation_object": "Verblijfsobject",
   "basisregistratie-wonen.amount_of": "Aantal {entity}",
+  "basisregistratie-wonen.area": "Gebied",
   "basisregistratie-wonen.bag_objects": "BAG Objecten",
   "basisregistratie-wonen.brk_objects": "BRK Objecten",
   "basisregistratie-wonen.cadastral_object.nr": "Kadastraal objectnummer",
+  "basisregistratie-wonen.cadastral_object.nrs": "Kadastraal objectnummers",
   "basisregistratie-wonen.cadastral_object": "Kadastraal object",
   "basisregistratie-wonen.cadastral_subject": "Kadastraal subject",
   "basisregistratie-wonen.chamber_of_commerce.nr": "KvK-nummer",
+  "basisregistratie-wonen.chamber_of_commerce.nrs": "KvK-nummers",
   "basisregistratie-wonen.close": "Sluiten",
   "basisregistratie-wonen.csv_file_name": "basisregistratie_wonen_export",
   "basisregistratie-wonen.establishment": "Vestiging",
   "basisregistratie-wonen.export_cta": "Exporteren",
   "basisregistratie-wonen.house.id": "Pand-ID",
   "basisregistratie-wonen.house": "Pand",
+  "basisregistratie-wonen.log_in_adw": "Inloggen ADW",
+  "basisregistratie-wonen.log_in": "Inloggen",
+  "basisregistratie-wonen.log_out": "Uitloggen",
+  "basisregistratie-wonen.logged_in_as": "Ingelogd als: {name}",
   "basisregistratie-wonen.natural_person": "Kadastraal subject NP",
   "basisregistratie-wonen.no": "Nee",
   "basisregistratie-wonen.non_natural_person": "Kadastraal subject NNP",
   "basisregistratie-wonen.note_remark": "Je notitie wordt niet bewaard, maar is wel te zien in de export.",
   "basisregistratie-wonen.note": "Notitie",
-  "basisregistratie-wonen.number_indication.id": "Nummeraanduiding-ID",
-  "basisregistratie-wonen.number_indication": "Nummeraanduiding",
+  "basisregistratie-wonen.number_identification.id": "Nummeraanduiding-ID",
+  "basisregistratie-wonen.number_identification": "Nummeraanduiding",
   "basisregistratie-wonen.overview": "Overzicht",
   "basisregistratie-wonen.public_space_id": "Openbare ruimte-ID",
   "basisregistratie-wonen.public_space": "Openbare ruimte",
-  "basisregistratie-wonen.rsin": "RSIN",
+  "basisregistratie-wonen.rsin": "RSIN-nummer",
+  "basisregistratie-wonen.rsins": "RSIN-nummers",
   "basisregistratie-wonen.session_expired": "Er kan geen verbinding gemaakt worden met de externe data bronnen. Waarschijnlijk is de sessie verlopen. Log opnieuw in.",
   "basisregistratie-wonen.to_stelselpedia": "Naar definitie van {name} op Stelselpedia (opent in een nieuw venster).",
   "basisregistratie-wonen.unable_to_fetch": "Er kan geen verbinding gemaakt worden met de externe data bronnen. Toegang is alleen mogelijk via het netwerk van de gemeente Amsterdam. Controleer de netwerkverbinding.",
