Updates search placeholder text

--- a/app/translations/nl.json
+++ b/app/translations/nl.json
@@ -39,7 +39,7 @@
   "basisregistratie-wonen.unauthorized": "Je moet ingelogd zijn om alle gegevens uit de basisregistratie te kunnen raadplegen.",
   "basisregistratie-wonen.unknown": "n.b.",
   "basisregistratie-wonen.yes": "Ja",
-  "basisregistratie-wonen.search_placeholder": "Zoek data op adres, postcode, kadastrale aanduiding, etc.",
+  "basisregistratie-wonen.search_placeholder": "Zoek data op adres, postcode, nummeraanduiding-ID of verblijfsobject-ID.",
   "basisregistratie-wonen.extra_fields": "Extra velden",
   "basisregistratie-wonen.residence": "Woonplaats",
   "basisregistratie-wonen.address": "Adres",
