BW-53 Change title This PR: - changes the site's title from 'Basisregistratie wonen' to 'Registraties' - replaces all occurences in all files - modifies Jenkinsfile in preparation of pipeline setup

--- a/app/translations/nl.json
+++ b/app/translations/nl.json
@@ -1,55 +1,55 @@
 {
-  "basisregistratie-wonen.accommodation_object.id": "Verblijfsobject-ID",
-  "basisregistratie-wonen.accommodation_object": "Verblijfsobject",
-  "basisregistratie-wonen.amount_of": "Aantal {entity}",
-  "basisregistratie-wonen.area": "Gebied",
-  "basisregistratie-wonen.bag_objects": "BAG Objecten",
-  "basisregistratie-wonen.brk_objects": "BRK Objecten",
-  "basisregistratie-wonen.cadastral_object.indication": "Kadastraal objectaanduiding",
-  "basisregistratie-wonen.cadastral_object.indications": "Kadastraal objectaanduidingen",
-  "basisregistratie-wonen.cadastral_object": "Kadastraal object",
-  "basisregistratie-wonen.cadastral_subject": "Kadastraal subject",
-  "basisregistratie-wonen.chamber_of_commerce.nr": "KvK-nummer",
-  "basisregistratie-wonen.chamber_of_commerce.nrs": "KvK-nummers",
-  "basisregistratie-wonen.close": "Sluiten",
-  "basisregistratie-wonen.csv_file_name": "basisregistratie_wonen_export",
-  "basisregistratie-wonen.establishment": "Vestiging",
-  "basisregistratie-wonen.export_cta": "Exporteren",
-  "basisregistratie-wonen.house.id": "Pand-ID",
-  "basisregistratie-wonen.house": "Pand",
-  "basisregistratie-wonen.log_in_adw": "Inloggen ADW",
-  "basisregistratie-wonen.log_in": "Inloggen",
-  "basisregistratie-wonen.log_out": "Uitloggen",
-  "basisregistratie-wonen.logged_in_as": "Ingelogd als: {name}",
-  "basisregistratie-wonen.natural_person": "Kadastraal subject NP",
-  "basisregistratie-wonen.no": "Nee",
-  "basisregistratie-wonen.non_natural_person": "Kadastraal subject NNP",
-  "basisregistratie-wonen.note_remark": "Je notitie wordt niet bewaard, maar is wel te zien in de export.",
-  "basisregistratie-wonen.note": "Notitie",
-  "basisregistratie-wonen.number_identification.id": "Nummeraanduiding-ID",
-  "basisregistratie-wonen.number_identification": "Nummeraanduiding",
-  "basisregistratie-wonen.overview": "Overzicht",
-  "basisregistratie-wonen.public_space_id": "Openbare ruimte-ID",
-  "basisregistratie-wonen.public_space": "Openbare ruimte",
-  "basisregistratie-wonen.rsin": "RSIN-nummer",
-  "basisregistratie-wonen.rsins": "RSIN-nummers",
-  "basisregistratie-wonen.session_expired": "Er kan geen verbinding gemaakt worden met de externe data bronnen. Waarschijnlijk is de sessie verlopen. Log opnieuw in.",
-  "basisregistratie-wonen.to_stelselpedia": "Naar definitie van {name} op Stelselpedia (opent in een nieuw venster).",
-  "basisregistratie-wonen.unable_to_fetch": "Er kan geen verbinding gemaakt worden met de externe data bronnen. Toegang is alleen mogelijk via het netwerk van de gemeente Amsterdam. Controleer de netwerkverbinding.",
-  "basisregistratie-wonen.unauthorized": "Je moet ingelogd zijn om alle gegevens uit de basisregistratie te kunnen raadplegen.",
-  "basisregistratie-wonen.unknown": "n.b.",
-  "basisregistratie-wonen.yes": "Ja",
-  "basisregistratie-wonen.search_hint": "Doorzoek de basisregistratie op adres, postcode, nummeraanduiding-ID, verblijfsobject-ID of kadastraal objectaanduiding",
-  "basisregistratie-wonen.search": "Zoeken",
-  "basisregistratie-wonen.search_term": "Zoekterm",
-  "basisregistratie-wonen.search_form_legend": "Doorzoeken basisregistratie",
-  "basisregistratie-wonen.extra_fields": "Extra velden",
-  "basisregistratie-wonen.residence": "Woonplaats",
-  "basisregistratie-wonen.address": "Adres",
-  "basisregistratie-wonen.on_this_page": "Op deze pagina",
-  "basisregistratie-wonen.unknown_error": "Er is een onbekende fout opgetreden. Het kan zijn dat een van de databronnen niet beschikbaar is. Probeer het over enkele minuten nogmaals.",
-  "basisregistratie-wonen.server_error": "Er is een fout opgetreden op de server. Niet alle gegevens uit de databronnen kunnen opgehaald worden. Probeer het over een paar minuten nogmaals.",
-  "basisregistratie-wonen.service_unavailable": "Een van de databronnen is niet beschikbaar. Probeer het over een paar minuten nogmaals.",
-  "basisregistratie-wonen.filled_in_by": "Ingevuld door",
-  "basisregistratie-wonen.resource_not_found": "Een of meerdere databronnen zijn niet beschikbaar of rerourneerden geen gegevens. Controleer het URL of probeer het over enkele minuten nogmaals."
+  "registraties.accommodation_object.id": "Verblijfsobject-ID",
+  "registraties.accommodation_object": "Verblijfsobject",
+  "registraties.amount_of": "Aantal {entity}",
+  "registraties.area": "Gebied",
+  "registraties.bag_objects": "BAG Objecten",
+  "registraties.brk_objects": "BRK Objecten",
+  "registraties.cadastral_object.indication": "Kadastraal objectaanduiding",
+  "registraties.cadastral_object.indications": "Kadastraal objectaanduidingen",
+  "registraties.cadastral_object": "Kadastraal object",
+  "registraties.cadastral_subject": "Kadastraal subject",
+  "registraties.chamber_of_commerce.nr": "KvK-nummer",
+  "registraties.chamber_of_commerce.nrs": "KvK-nummers",
+  "registraties.close": "Sluiten",
+  "registraties.csv_file_name": "registraties_export",
+  "registraties.establishment": "Vestiging",
+  "registraties.export_cta": "Exporteren",
+  "registraties.house.id": "Pand-ID",
+  "registraties.house": "Pand",
+  "registraties.log_in_adw": "Inloggen ADW",
+  "registraties.log_in": "Inloggen",
+  "registraties.log_out": "Uitloggen",
+  "registraties.logged_in_as": "Ingelogd als: {name}",
+  "registraties.natural_person": "Kadastraal subject NP",
+  "registraties.no": "Nee",
+  "registraties.non_natural_person": "Kadastraal subject NNP",
+  "registraties.note_remark": "Je notitie wordt niet bewaard, maar is wel te zien in de export.",
+  "registraties.note": "Notitie",
+  "registraties.number_identification.id": "Nummeraanduiding-ID",
+  "registraties.number_identification": "Nummeraanduiding",
+  "registraties.overview": "Overzicht",
+  "registraties.public_space_id": "Openbare ruimte-ID",
+  "registraties.public_space": "Openbare ruimte",
+  "registraties.rsin": "RSIN-nummer",
+  "registraties.rsins": "RSIN-nummers",
+  "registraties.session_expired": "Er kan geen verbinding gemaakt worden met de externe data bronnen. Waarschijnlijk is de sessie verlopen. Log opnieuw in.",
+  "registraties.to_stelselpedia": "Naar definitie van {name} op Stelselpedia (opent in een nieuw venster).",
+  "registraties.unable_to_fetch": "Er kan geen verbinding gemaakt worden met de externe data bronnen. Toegang is alleen mogelijk via het netwerk van de gemeente Amsterdam. Controleer de netwerkverbinding.",
+  "registraties.unauthorized": "Je moet ingelogd zijn om alle gegevens uit de basisregistratie te kunnen raadplegen.",
+  "registraties.unknown": "n.b.",
+  "registraties.yes": "Ja",
+  "registraties.search_hint": "Doorzoek de basisregistratie op adres, postcode, nummeraanduiding-ID, verblijfsobject-ID of kadastraal objectaanduiding",
+  "registraties.search": "Zoeken",
+  "registraties.search_term": "Zoekterm",
+  "registraties.search_form_legend": "Doorzoeken basisregistratie",
+  "registraties.extra_fields": "Extra velden",
+  "registraties.residence": "Woonplaats",
+  "registraties.address": "Adres",
+  "registraties.on_this_page": "Op deze pagina",
+  "registraties.unknown_error": "Er is een onbekende fout opgetreden. Het kan zijn dat een van de databronnen niet beschikbaar is. Probeer het over enkele minuten nogmaals.",
+  "registraties.server_error": "Er is een fout opgetreden op de server. Niet alle gegevens uit de databronnen kunnen opgehaald worden. Probeer het over een paar minuten nogmaals.",
+  "registraties.service_unavailable": "Een van de databronnen is niet beschikbaar. Probeer het over een paar minuten nogmaals.",
+  "registraties.filled_in_by": "Ingevuld door",
+  "registraties.resource_not_found": "Een of meerdere databronnen zijn niet beschikbaar of rerourneerden geen gegevens. Controleer het URL of probeer het over enkele minuten nogmaals."
 }
