(Fix) Missing Intl in tests This PR: - loads an `intl` fallback for node threads - wraps components in `Provider` and `Intlprovider` components - adds English translations (because, why not?) - configures the supported browsers

--- a/app/translations/en.json
+++ b/app/translations/en.json
@@ -1,31 +1,55 @@
 {
-  "boilerplate.components.Footer.author.message": "Made with love by {author}.",
-  "boilerplate.components.Footer.license.message": "This project is licensed under the MIT license.",
-  "boilerplate.components.Header.features": "Features",
-  "boilerplate.components.Header.home": "Home",
-  "boilerplate.containers.FeaturePage.css.header": "Features",
-  "boilerplate.containers.FeaturePage.css.message": "Next generation CSS",
-  "boilerplate.containers.FeaturePage.feedback.header": "Instant feedback",
-  "boilerplate.containers.FeaturePage.feedback.message": "Enjoy the best DX and code your app at the speed of thought! Your\n    saved changes to the CSS and JS are reflected instantaneously\n    without refreshing the page. Preserve application state even when\n    you update something in the underlying code!",
-  "boilerplate.containers.FeaturePage.header": "Features",
-  "boilerplate.containers.FeaturePage.internationalization.header": "Complete i18n Standard Internationalization & Pluralization",
-  "boilerplate.containers.FeaturePage.internationalization.message": "Scalable apps need to support multiple languages, easily add and support multiple languages with `react-intl`.",
-  "boilerplate.containers.FeaturePage.javascript.header": "Next generation JavaScript",
-  "boilerplate.containers.FeaturePage.javascript.message": "Use template strings, object destructuring, arrow functions, JSX\n    syntax and more, today.",
-  "boilerplate.containers.FeaturePage.network.header": "Offline-first",
-  "boilerplate.containers.FeaturePage.network.message": "The next frontier in performant web apps: availability without a\n      network connection from the instant your users load the app.",
-  "boilerplate.containers.FeaturePage.routing.header": "Industry-standard routing",
-  "boilerplate.containers.FeaturePage.routing.message": "Write composable CSS that's co-located with your components for\n    complete modularity. Unique generated class names keep the\n    specificity low while eliminating style clashes. Ship only the\n    styles that are on the page for the best performance.",
-  "boilerplate.containers.FeaturePage.scaffolding.header": "Quick scaffolding",
-  "boilerplate.containers.FeaturePage.scaffolding.message": "Automate the creation of components, containers, routes, selectors\n  and sagas - and their tests - right from the CLI!",
-  "boilerplate.containers.FeaturePage.state_management.header": "Predictable state management",
-  "boilerplate.containers.FeaturePage.state_management.message": "Unidirectional data flow allows for change logging and time travel\n    debugging.",
-  "boilerplate.containers.HomePage.start_project.header": "Start your next react project in seconds",
-  "boilerplate.containers.HomePage.start_project.message": "A highly scalable, offline-first foundation with the best DX and a focus on performance and best practices",
-  "boilerplate.containers.HomePage.tryme.atPrefix": "@",
-  "boilerplate.containers.HomePage.tryme.header": "Try me!",
-  "boilerplate.containers.HomePage.tryme.message": "Show Github repositories by",
-  "boilerplate.containers.LocaleToggle.de": "de",
-  "boilerplate.containers.LocaleToggle.en": "en",
-  "boilerplate.containers.NotFoundPage.header": "Page not found."
+  "registraties.accommodation_object.id": "Verblijfsobject-ID",
+  "registraties.accommodation_object": "Verblijfsobject",
+  "registraties.amount_of": "Number of {entity}",
+  "registraties.area": "Area",
+  "registraties.bag_objects": "BAG Objects",
+  "registraties.brk_objects": "BRK Objects",
+  "registraties.cadastral_object.indication": "Cadastral object indicator",
+  "registraties.cadastral_object.indications": "Cadastral object indicators",
+  "registraties.cadastral_object": "Cadastral object",
+  "registraties.cadastral_subject": "Cadastral subject",
+  "registraties.chamber_of_commerce.nr": "Chamber of commerce number",
+  "registraties.chamber_of_commerce.nrs": "Chamber of commerce numbers",
+  "registraties.close": "Close",
+  "registraties.csv_file_name": "registraties_export",
+  "registraties.establishment": "Establoshment",
+  "registraties.export_cta": "Export",
+  "registraties.house.id": "House-ID",
+  "registraties.house": "House",
+  "registraties.log_in_adw": "Log in ADW",
+  "registraties.log_in": "Log in",
+  "registraties.log_out": "Log out",
+  "registraties.logged_in_as": "Logged in as: {name}",
+  "registraties.natural_person": "Cadastral subject NP",
+  "registraties.no": "No",
+  "registraties.non_natural_person": "Cadastral subject NNP",
+  "registraties.note_remark": "Your note will not be saved, but will be visible in the export.",
+  "registraties.note": "Note",
+  "registraties.number_identification.id": "Number indication-ID",
+  "registraties.number_identification": "Number indication",
+  "registraties.overview": "Overview",
+  "registraties.public_space_id": "Public space-ID",
+  "registraties.public_space": "Public space",
+  "registraties.rsin": "RSIN-number",
+  "registraties.rsins": "RSIN-numbers",
+  "registraties.session_expired": "Er kan geen verbinding gemaakt worden met de externe data bronnen. Waarschijnlijk is de sessie verlopen. Log opnieuw in.",
+  "registraties.to_stelselpedia": "Naar definitie van {name} op Stelselpedia (opent in een nieuw venster).",
+  "registraties.unable_to_fetch": "Er kan geen verbinding gemaakt worden met de externe data bronnen. Toegang is alleen mogelijk via het netwerk van de gemeente Amsterdam. Controleer de netwerkverbinding.",
+  "registraties.unauthorized": "Je moet ingelogd zijn om alle gegevens uit de basisregistratie te kunnen raadplegen.",
+  "registraties.unknown": "unknown",
+  "registraties.yes": "Yes",
+  "registraties.search_hint": "Doorzoek de basisregistratie op adres, postcode, nummeraanduiding-ID, verblijfsobject-ID of kadastraal objectaanduiding",
+  "registraties.search": "Search",
+  "registraties.search_term": "Search term",
+  "registraties.search_form_legend": "Search in basis registration",
+  "registraties.extra_fields": "Extra fields",
+  "registraties.residence": "Place of residence",
+  "registraties.address": "Address",
+  "registraties.on_this_page": "On this page",
+  "registraties.unknown_error": "Er is een onbekende fout opgetreden. Het kan zijn dat een van de databronnen niet beschikbaar is. Probeer het over enkele minuten nogmaals.",
+  "registraties.server_error": "Er is een fout opgetreden op de server. Niet alle gegevens uit de databronnen kunnen opgehaald worden. Probeer het over een paar minuten nogmaals.",
+  "registraties.service_unavailable": "Een van de databronnen is niet beschikbaar. Probeer het over een paar minuten nogmaals.",
+  "registraties.filled_in_by": "Filled in by",
+  "registraties.resource_not_found": "Een of meerdere databronnen zijn niet beschikbaar of retourneerden geen gegevens. Controleer de URL of probeer het over enkele minuten nogmaals."
 }
