--- a/app/translations/nl.json
+++ b/app/translations/nl.json
@@ -42,6 +42,7 @@
   "registraties.search": "Zoeken",
   "registraties.search_term": "Zoekterm",
   "registraties.search_form_legend": "Doorzoeken basisregistratie",
+  "registraties.search_history_header": "Onlangs gezocht op",
   "registraties.extra_fields": "Extra velden",
   "registraties.residence": "Woonplaats",
   "registraties.address": "Adres",
